# drone_pico

./: README.md
drone_project/: receiver.cpp  receiver_util.cpp  receiver_util.h  transmitter.cpp  transmitter_util.cpp  transmitter_util.h  utility.h
lib/RF24/examples_pico/: defaultPins.h  gettingStarted.cpp
lib/mpu6050/: mpu6050_driver.cpp  mpu6050_driver.h
lib/pico-ssd1306/: CMakeLists.txt
lib/pico-ssd1306/examples/basic_text/: CMakeLists.txt  main.cpp
